--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title>OpenClaw Calendar</title>
+    <meta name="google-site-verification" content="你的验证码" />
 </head>
 <body>
     <h1>OpenClaw Calendar Integration</h1>
     <p>This is a personal calendar management tool.</p>
     <p>Contact: your-email@example.com</p>
+    <p><a href="privacy.html">Privacy Policy</a></p>
 </body>
 </html>
